--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
   "author": "Bishal Udash",
+  "description": "A wrapper project for google maps api",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
