--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A wrapper project for google maps api",
   "keywords": [ "freecodecamp", "Google maps", "wrapper" ],
   "license": "MIT",
+  "version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
